Setup the intro, menu, and input field controllers

--- a/TrumpLibs/Info.plist
+++ b/TrumpLibs/Info.plist
@@ -2,6 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>tweetURL</key>
+	<string>https://twitter.com/realDonaldTrump/status/</string>
+	<key>twitterTimelineURL</key>
+	<string>https://twitter.com/</string>
+	<key>twitterHandle</key>
+	<string>realDonaldTrump</string>
+	<key>collections</key>
+	<dict/>
+	<key>bro</key>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Roboto-Medium.ttf</string>
+		<string>Roboto-Light.ttf</string>
+		<string>Roboto-Thin.ttf</string>
+		<string>Roboto-Regular.ttf</string>
+		<string>Roboto-Black.ttf</string>
+		<string>Roboto-BlackItalic.ttf</string>
+		<string>Roboto-Bold.ttf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
